# cpp_template

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CppCheckSuppressions.txt  readme.md
include/util/: Logger.h  memory_usage.h
src/util/: CMakeLists.txt  Logger.cpp  Logger_spdlog.cpp  Logger_spdlog.h  memory_usage.cpp
test/: CMakeLists.txt  main.cpp
test/util/: memory_usage_test.cpp
